feat(identity-service): user LOCAL 가입 도메인 + port (PR6-a)
PRD user/createUser.md §9 KEEP+FIX 결정의 도메인 슬라이스. application /
infrastructure / presentation 은 PR6-b/c 후속.

- AccountType enum (LOCAL/OAUTH) — OAuthProvider 의 OAuth 한정 의미 보존
- HashedPassword VO — record + blank 거부 + toString 마스킹
- PasswordEncoder port (encode + matches) — domain/repository
- User.registerLocal 정적 팩토리 + accountType/hashedPassword 필드
- User.restore 시그니처 확장 + invariant 4분기 (LOCAL↔password,
  LOCAL↔no-oauth, OAUTH↔no-password, OAUTH↔≥1-oauth)
- 도메인 예외 2종: EmailNotValidatedException (사전조건),
  EmailAlreadyRegisteredException (LOCAL 중복)
- UserMapper.toDomain 임시 매핑 + fail-fast 가드 (PR6-b 의 V3 마이그레이션
  머지 전까지 OAUTH 가입자만 복원, 가정 위반 시 IllegalStateException)
- OAuthCallbackServiceTest / UserRegistrationServiceTest 시그니처 정합화
- 결정 문서 추가: decisions/identity/local-credential-modeling.md
  (옵션 A1 vs A2 비교, A2 채택 — users.account_type + password_hash
   컬럼 추가, OAuthProvider.LOCAL 미추가)

테스트: 도메인/매퍼/ArchUnit 단위 테스트 모두 그린. E2E 는 PR6-b 의
실제 컬럼 매핑 + Application service 합류 시점에 회귀 검증.

리뷰: code-reviewer / test-reviewer 모두 APPROVE WITH COMMENTS.
M1 (UserMapper 가드, UserTest static import) 본 커밋 반영.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>